WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46709
[gtk] Fedora has a different path for the liberation fonts
https://bugs.webkit.org/show_bug.cgi?id=46709
Summary
[gtk] Fedora has a different path for the liberation fonts
Alejandro G. Castro
Reported
2010-09-28 03:16:57 PDT
DRT fails with the error: Could not find font at /usr/share/fonts/truetype/ttf-liberation/LiberationMono-BoldItalic.ttf. Either install this font or file a bug at
http://bugs.webkit.org
if it is installed in another location. Checking the location of the fonts: % rpm -ql liberation-sans-fonts-1.05.1.20090721-2.fc12.noarch /usr/share/fonts/liberation /usr/share/fonts/liberation/LiberationSans-Bold.ttf /usr/share/fonts/liberation/LiberationSans-BoldItalic.ttf /usr/share/fonts/liberation/LiberationSans-Italic.ttf /usr/share/fonts/liberation/LiberationSans-Regular.ttf
Attachments
Patch for this issue
(5.80 KB, patch)
2010-09-28 09:34 PDT
,
Martin Robinson
gustavo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2010-09-28 09:34:07 PDT
Created
attachment 69062
[details]
Patch for this issue
Alejandro G. Castro
Comment 2
2010-09-28 09:49:18 PDT
Looks good, I tested it in Fedora and it worked.
Gustavo Noronha (kov)
Comment 3
2010-09-28 13:04:30 PDT
Comment on
attachment 69062
[details]
Patch for this issue View in context:
https://bugs.webkit.org/attachment.cgi?id=69062&action=review
OK.
> WebKitTools/DumpRenderTree/gtk/DumpRenderTree.cpp:187 > +
needless empty line
Martin Robinson
Comment 4
2010-09-28 13:19:25 PDT
Committed
r68554
: <
http://trac.webkit.org/changeset/68554
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug