2010-09-28  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Gustavo Noronha Silva.

        [gtk] Fedora has a different path for the liberation fonts
        https://bugs.webkit.org/show_bug.cgi?id=46709

        When searching for DRT fonts, also look in the path where those fonts
        are commonly found on Fedora systems.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (initializeFonts): Include logic for looking for Fedora-style font paths.

Canonical link: https://commits.webkit.org/59241@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68554 268f45cc-cd09-0410-ab3c-d52691b4dbfc